--- a/ch03/src/main/webapp/tabbox2.html
+++ b/ch03/src/main/webapp/tabbox2.html
@@ -43,7 +43,30 @@ background-color: #fc6;
 <script type="text/javascript">
 //DOM Level 1 Event 처리 : HTML element의 event 속성에 자바스크립트 코드를 사용하는 법
 //2) JavaScript Code(DOM API) 로만 작성하기
+var onClicked = function(){
+	console.log("click"+this.innerText);
+	//unselect
+	var lisSelected = document.getElementsByClassName("selected");
+	(lisSelected.length === 1) && (lisSelected[0].className='');
+	//select
+	this.className = "selected";
+}
 
+window.onload = function(){
+	console.log("DOM loaded!");
+	var divTabBox = document.getElementsByClassName("tab-box")[0];
+	console.log(divTabBox.childNodes);
+	
+	var ul = divTabBox.childNodes[1];
+	console.log(ul);
+	
+	var liTabs = ul.getElementsByTagName("li");
+	console.log(liTabs);
+	
+	for(var i=0; i< liTabs.length; i++){
+		liTabs[i].onclick =onClicked;
+	}
+}
 </script>
 
 </head>
