--- a/ch06/src/main/webapp/ex14.html
+++ b/ch06/src/main/webapp/ex14.html
@@ -10,23 +10,28 @@
  * anchor : 버튼이나 메뉴로 사용하는 경우 click event
  */
  	window.addEventListener("load", function() {
-		var form = document.getElementById("form-login");
-		form.onsubmit = function(){
+		
+ 		var form = document.getElementById("form-login");
+ 		
+		form.addEventListener('submit', function(){
+			event.preventDefault();
+			
 			var inputEmail = document.getElementById("input-email");
 			if(inputEmail.value == ''){
 				alert('이메일이 비어 있습니다.');
 				inputEmail.focus();
-				return false;
+				return;		
 			}
 			
 			var inputPassword = document.getElementById("input-password");
 			if(inputPassword.value == ''){
 				alert('이메일이 비어 있습니다.');
 				inputPassword.focus();
-				return false;
+				return;
 			}
-			return true;
-		}
+			//validation success
+			this.submit();
+		});
  	});
  	</script>
  	</head>
