--- a/ch07/src/main/webapp/ex01.html
+++ b/ch07/src/main/webapp/ex01.html
@@ -2,27 +2,26 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script type="text/javascript" src="./jquery/jquery-1.9.0.js"></script>
+<!-- 개별 소스 버전(서비스 서버 호스팅) -->
+<!-- <script type="text/javascript" src="./jquery/jquery-3.6.0.js"></script>
+ -->
+<!-- 개별 소스 버전(서비스 서버 호스팅) -->
+<!-- <script type="text/javascript" src="./jquery/jquery-3.6.0.min.js"></script>
+ -->
+ 
+<!-- 개별압축버전(CDN) -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <script>
+var $obj1 = jQuery();
+console.log(typeof(jQuery),typeof($obj),$obj1.jquery);
 
-
-
-
-$( document ).ready( function() {
-
-	//alert( "Hello jQuery" );
-	var $p = $("p");
-	alert( $p.length );
-	
-	
-});
+var $obj2 = jQuery();
+console.log(typeof(jQuery),typeof($obj),$obj2.jquery);
 </script>
 </head>
 <body>
-<p>
-    이 문장이 보이고 Hello World가 뜨면, 자바스크립트에서 HTML 엘리멘트에 접근할 수
-    있는 것입니다. 	
-</p>
+	<h1>jQuery 로딩</h1>
 </body>
 </html>
  
