js jQuery 라이브러리 만들기

--- a/ch07/src/main/webapp/ex01.html
+++ b/ch07/src/main/webapp/ex01.html
@@ -13,6 +13,12 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
+// 1. jQuery는 function type 객체(함수)다.
+// 2. jQuery 함수를 호출하면 object type 객체 (jQuery 객체, 유사배열)를 반환한다.
+// 3. $는 jQuery 함수 객체를 참조한다.($는 jQuery 함수 객체 이름의 Alias 이다.)
+// 4. jQuery 라이브러리의 정상적인 로딩은 jQuery 객체의 속성 jquery(버전 정보)로 확인할 수 있다.
+
+
 var $obj1 = jQuery();
 console.log(typeof(jQuery),typeof($obj),$obj1.jquery);
 
