--- a/ch07/src/main/webapp/ex09.html
+++ b/ch07/src/main/webapp/ex09.html
@@ -14,8 +14,8 @@
 <body>
 <h1>선택자 - 전체</h1>
 	<ul>
-		<li><strong> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
-		<li><strong id="s1"> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
+		<li id="red"><strong> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
+		<li id="blue"><strong id="s1"> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
 		<li id="red"><strong> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
 		<li id="blue"><strong id="s2"> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
 	</ul>
