--- a/ch07/src/main/webapp/ex10.html
+++ b/ch07/src/main/webapp/ex10.html
@@ -5,21 +5,22 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="Content-Style-Type" content="text/css" />
 		<meta http-equiv="Content-Script-Type" content="text/javascript" />
-		<title>sample8</title>
+		<title>sample2</title>
 		<script type="text/javascript" src="./jquery/jquery-1.9.0.js"></script>
 		<script type="text/javascript">
 		$(function(){
-			$("#second + li").css("color","red");
+			$("#first").css("color","red");
 		});
 		</script>
 	</head>
 	<body>
+	
 		<ul>
-			<li> 텍스트 텍스트 텍스트 텍스트 텍스트 </li>
+			<li id="first"> 텍스트 텍스트 텍스트 텍스트 텍스트 </li>
 			<li id="second"> 텍스트 텍스트 텍스트 텍스트 텍스트 </li>
-			<li> 텍스트 텍스트 텍스트 텍스트 텍스트 </li>
-			<li> 텍스트 텍스트 텍스트 텍스트 텍스트 </li>
-
+			<li id="third"> 텍스트 텍스트 텍스트 텍스트 텍스트 </li>
+			<li id="fourth"> 텍스트 텍스트 텍스트 텍스트 텍스트 </li>
 		</ul>
+
 	</body>
 </html>
