--- a/ch07/src/main/webapp/ex04.html
+++ b/ch07/src/main/webapp/ex04.html
@@ -16,9 +16,18 @@ $(function(){
 	$obj.click(function(){
 		//이벤트 핸들러에서 this는 JQuery Object가 아닌 HTMLElement다.
 		console.log("clicked:"+this);
-		var $obj = $(this);
-		$obj.css("text-decoration","underline");
-		$obj.text('클릭!!');
+		
+		/* var $obj = $(this); */
+/* 		$obj.css("text-decoration","underline");
+		$obj.text('클릭!!'); */
+		
+		//jQuery Object의 거의 모든 함수(예외 : traverse)는
+		//호출한 jQuery Object를 다시 반환한다.
+		//함수 체인(chain)이 가능하다 
+		$(this)
+			.css("text-decoration","underline")
+			.text('클릭!!');
+		
 	});
 });
 
