--- a/ch07/src/main/webapp/ex08.html
+++ b/ch07/src/main/webapp/ex08.html
@@ -6,16 +6,22 @@
 <script type="text/javascript">
 	$(function() {
 		setTimeout(function(){
-			$("li *").css("font-weight","bold");	
-		},1000);
+			$(".red strong").css({
+				color : "red",
+				fontWeight : "normal"
+			});
+			$(".blue strong").css({
+				color : "blue",
+				fontWeight : "normal"				
+			});
+		},2000);
 	});
 </script>
 </head>
 <body>
-<h1>선택자 - 전체</h1>
 	<ul>
-		<li><strong> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
-		<li><strong id="s1"> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
+		<li id="red"><strong> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
+		<li id="blue"><strong id="s1"> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
 		<li id="red"><strong> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
 		<li id="blue"><strong id="s2"> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트</li>
 	</ul>
