--- a/ch07/src/main/webapp/ex26.html
+++ b/ch07/src/main/webapp/ex26.html
@@ -2,14 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script type="text/javascript" src="./jquery/jquery-1.9.0.js"></script>
+<script type="text/javascript" src="./jquery/jquery-3.6.0.js"></script>
 <script type="text/javascript">
-	$( function() {
-		/* 코드를 완성하세요 */
-	} );  
+	$(function() {
+		setTimeout(function(){
+			$("#p2 strong").prependTo("#p1");
+		},1000);
+	});
 </script>
 </head>
 <body>
-<p id="p1">내용입니다.</p>
+	<h1>DOM 조작 API - prependTo() / 오</h1>
+	
+	<p id = "p1">efghijk</p>
+	<p id = "p2"><strong>ABD</strong></p>
 </body>
 </html>
