--- a/ch07/src/main/webapp/ex27.html
+++ b/ch07/src/main/webapp/ex27.html
@@ -2,15 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script type="text/javascript" src="./jquery/jquery-1.9.0.js"></script>
+<script type="text/javascript" src="./jquery/jquery-3.6.0.js"></script>
 <script type="text/javascript">
-	$( function() {
-		/* 코드를 완성하세요 */
-	} );  
+	$(function() {
+		setTimeout(function(){
+			$("#p2 strong").appendTo("#p1");
+		},1000);
+	});
 </script>
 </head>
 <body>
-<h1 id="h1">타이틀입니다.</h1>
-
+	<h1>DOM 조작 API - appendTo() / 위</h1>
+	
+	<p id = "p1">abcdefg</p>
+	<p id = "p2">abcdfg<strong>HIJKLMN</strong></p>
 </body>
 </html>
