--- a/ch07/src/main/webapp/ex34.html
+++ b/ch07/src/main/webapp/ex34.html
@@ -2,16 +2,41 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script type="text/javascript" src="./jquery/jquery-1.9.0.js"></script>
+<script type="text/javascript" src="./jquery/jquery-3.6.0.js"></script>
 <script type="text/javascript">
-	$( function() {
-		/* 코드를 완성하세요 */
-	} );  
+	$(function() {
+		/* 부모는 div */
+		setTimeout(function() {
+/* 			$("h2 a").attr("href","http://douzone.com");
+			$("h2 a").attr("target","_blank");
+			$("h2 a").attr("title","더존");
+			$("h2 a").css("font-size","0.75em"); */
+
+			//함수 체인
+/* 			$("h2 a").attr("href","http://douzone.com")
+					 .attr("target","_blank")
+					 .attr("title","더존")
+					 .css("font-size","0.75em"); */
+
+			$("h2 a").attr({
+					href : "http://douzone.com",
+					target : "_blank",
+					title : "더존"
+					})
+					 .css("font-size","0.75em");					 
+					 
+		}, 2000);
+	});
 </script>
 </head>
 <body>
+	<h1>DOM 조작 API - attr() / 속성 추가</h1>
 
-<p>변경전</p>
+	<h2>
+		<a href="">
+		우리회사</a>
+	</h2>
+
 
 </body>
 </html>
